@@ -10,6 +10,8 @@ Changes in Slurm-GCP 4.1.3
  -- Enable swap cgroup control on debian images - fixes a slurm compute node
     error.
  -- Add startup scripts as terraform vars.
+ -- Fix calling "scontrol ... state=resume" in suspend.py for all nodes
+    multiple times for exclusive jobs.
 
 Changes in Slurm-GCP 4.1.2
 ==========================
